# FixOps

./: .gitignore  README.md  docker-compose.yml  fixops-services.sh  pyproject.toml  requirements-dev.txt
.cursor/rules/: agentic-ops-system.mdc  fixops-agentic-northstar.mdc
.github/workflows/: ci.yml
config/: controller.yaml  graph_edges.yaml  inventory.yaml  routing_rules.yaml  worker-k8s.yaml  worker-obs.yaml
context/comparison/: DECISIONS.md  GOAL.md  MCP_ADAPTER_STRATEGY.md  OPTION_B_CLOSURE_REPORT.md  OPTION_B_EXECUTION_PLAN.md  deep-comparison.html  fixops-architecture-master.htm  project-comparison.html  system-architecture.html  system-data-examples.html  tools-architecture.html  updated-comparison.html
controller/: README.md  controller.env  pyproject.toml
controller/src/controller/: __init__.py  conclusion.py  config.py  decision_log.py  interpretation.py  main.py  orchestrator.py  render.py  router.py  summary.py  worker_client.py
deploy/: Dockerfile.controller  Dockerfile.executor  Dockerfile.mcp-obs  Dockerfile.worker-k8s  Dockerfile.worker-obs
docs/: GETTING_STARTED.md
examples/alerts/: deployment-replicas.json  grafana-crashloop.json  loki-promtail-s3-error.json  pod-missing.json
examples/requests/: k8s-investigation.example.json
examples/worker-k8s/: cluster-map.example.yaml
fixtures/: alert_pod_crash.json  query_intent.json
scripts/: postgres_fixops_grants.sql  run-local-investigation.sh
services/controller/: pyproject.toml
services/controller/src/fixops_controller/: __init__.py  main.py  settings.py
services/controller/src/fixops_controller/api/: app.py  auth.py  graph_invoke.py
services/controller/src/fixops_controller/cli/: __init__.py  show.py
services/controller/src/fixops_controller/db/: decision_log.py  models.py  session.py  sync_session.py
services/controller/src/fixops_controller/graph/: build.py  nodes.py  state.py
services/controller/src/fixops_controller/inventory/: repo_sync.py  seed.py
services/controller/src/fixops_controller/llm/: client.py  extract.py  planner.py  rca.py
services/controller/src/fixops_controller/rag/: __init__.py  retrieve.py
services/controller/src/fixops_controller/routing/: rules.py
services/executor/: pyproject.toml
services/executor/src/fixops_executor/: __init__.py  app.py  main.py
services/mcp-fixops-obs/: pyproject.toml
services/mcp-fixops-obs/src/mcp_fixops_obs/: __init__.py  server.py
services/worker-app-rca/: pyproject.toml
services/worker-app-rca/src/fixops_worker_app_rca/: __init__.py  app.py  logic.py  main.py
services/worker-db/: pyproject.toml
services/worker-db/src/fixops_worker_db/: __init__.py  app.py  logic.py  main.py
services/worker-k8s/: pyproject.toml
services/worker-k8s/src/fixops_worker_k8s/: __init__.py  app.py  credentials.py  logic.py  main.py  settings.py
services/worker-k8s/src/fixops_worker_k8s/adapters/: __init__.py  kubernetes.py
services/worker-obs/: pyproject.toml
services/worker-obs/src/fixops_worker_obs/: __init__.py  app.py  logic.py  main.py  settings.py
services/worker-obs/src/fixops_worker_obs/adapters/: grafana.py  loki.py  prometheus.py
services/worker-pipeline/: pyproject.toml
services/worker-pipeline/src/fixops_worker_pipeline/: __init__.py  app.py  logic.py  main.py
tests/: conftest.py  test_api_auth.py  test_api_resume.py  test_cli_show.py  test_contract.py  test_extract_coalesce.py  test_graph.py  test_hil_api_audit.py  test_hitl.py  test_mcp_obs.py  test_planner_endpoint.py  test_rag_retrieval.py  test_rca_rag_context.py  test_routing.py  test_routing_new_workers.py  test_worker_domain_stubs.py  test_worker_k8s_credentials.py  test_worker_k8s_logic.py  test_worker_obs_logic.py
tests/integration/: __init__.py  test_k8s_worker_live.py  test_obs_stack_live.py  test_postgres_checkpoint.py  test_prometheus_live.py
workers/worker_k8s/: README.md  cluster-map.local.yaml  pyproject.toml  worker-k8s.env
workers/worker_k8s/src/worker_k8s/: __init__.py  cli.py  cluster_map.py  config.py  container_pick.py  datasource_cm_scan.py  http_server.py  server_main.py  synthesis.py  worker.py
workers/worker_k8s/src/worker_k8s/adapters/: __init__.py  kubernetes_api.py
