[project]
name = "fixops"
version = "0.1.0"
description = "FixOps Agentic — rules-first LangGraph controller, AD-006 workers, Postgres audit trail"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fixops-contract",
    "fixops-controller",
    "fixops-worker-obs",
    "fixops-executor",
]

[tool.uv]
default-groups = ["dev"]
package = false

[tool.uv.workspace]
members = [
    "packages/fixops-contract",
    "services/controller",
    "services/worker-obs",
    "services/mcp-fixops-obs",
    "services/executor",
]

[tool.uv.sources]
fixops-contract = { workspace = true }
fixops-controller = { workspace = true }
fixops-worker-obs = { workspace = true }
fixops-executor = { workspace = true }
mcp-fixops-obs = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "respx>=0.21",
    "mcp-fixops-obs",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["services/controller/src", "packages/fixops-contract/src", "services/worker-obs/src", "services/executor/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
