[project]
name = "fixops"
version = "0.1.0"
description = "FixOps Agentic — rules-first LangGraph controller, AD-006 workers, Postgres audit trail"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fixops-contract",
    "fixops-controller",
    "fixops-worker-obs",
    "fixops-worker-k8s",
    "fixops-worker-pipeline",
    "fixops-worker-db",
    "fixops-worker-app-rca",
    "fixops-executor",
]

[tool.uv]
default-groups = ["dev"]
package = false

[tool.uv.workspace]
members = [
    "packages/fixops-contract",
    "services/controller",
    "services/worker-obs",
    "services/worker-k8s",
    "services/worker-pipeline",
    "services/worker-db",
    "services/worker-app-rca",
    "services/mcp-fixops-obs",
    "services/executor",
]

[tool.uv.sources]
fixops-contract = { workspace = true }
fixops-controller = { workspace = true }
fixops-worker-obs = { workspace = true }
fixops-worker-k8s = { workspace = true }
fixops-worker-pipeline = { workspace = true }
fixops-worker-db = { workspace = true }
fixops-worker-app-rca = { workspace = true }
fixops-executor = { workspace = true }
mcp-fixops-obs = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "respx>=0.21",
    "mcp-fixops-obs",
    "rich>=13.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["services/controller/src", "packages/fixops-contract/src", "services/worker-obs/src", "services/worker-k8s/src", "services/worker-pipeline/src", "services/worker-db/src", "services/worker-app-rca/src", "services/executor/src"]
markers = [
    "integration: live services (Prometheus from config/worker-obs.yaml; skips if unreachable)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
