[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixops-controller"
version = "0.1.0"
description = "FixOps controller: routes alerts to workers and records decisions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fixops-contract>=0.1.0",
  "httpx>=0.27",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "rich>=13.7",
]

[project.scripts]
fixops-controller = "controller.main:main"

[tool.setuptools.packages.find]
where = ["src"]
