[project]
name = "fixops-worker-db"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fixops-contract",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
fixops-worker-db = "fixops_worker_db.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
