[project]
name = "fixops-worker-k8s"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fixops-contract",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.2",
    "kubernetes>=29.0.0",
]

[project.scripts]
fixops-worker-k8s = "fixops_worker_k8s.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
