[project]
name = "fixops-worker-obs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fixops-contract",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
]

[project.scripts]
fixops-worker-obs = "fixops_worker_obs.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
